<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="set_alarm_text">Set</string>
    <string name="cancel_alarm_text">Cancel</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="precipitation_text">Precipitation</string>
    <string name="hourly_text">Hourly</string>
    <string name="repeat_text">Repeat</string>
    

</resources>